tests/baselines/reference/jsxEsprimaFbTestSuite.errors.txt
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(10,2): error TS2304: Cannot find name 'a'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(10,2): error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(16,2): error TS2304: Cannot find name 'a'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(16,2): error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(18,2): error TS2304: Cannot find name 'a'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(18,2): error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(19,2): error TS2304: Cannot find name 'a'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(19,2): error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(22,2): error TS2304: Cannot find name '日本語'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(22,2): error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(24,2): error TS2304: Cannot find name 'AbC_def'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(24,2): error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(30,2): error TS2304: Cannot find name 'a'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(30,2): error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(32,2): error TS2304: Cannot find name 'a'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(32,2): error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(32,4): error TS1109: Expression expected.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(34,2): error TS2304: Cannot find name 'a'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(34,2): error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(34,4): error TS1109: Expression expected.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(36,2): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(38,2): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(38,7): error TS2304: Cannot find name 'br'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(40,2): error TS2304: Cannot find name 'LeftRight'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(40,2): error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(42,2): error TS2503: Cannot find namespace 'a'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(42,2): error TS2304: Cannot find name 'a.b'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(44,2): error TS2503: Cannot find namespace 'a'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(44,2): error TS2304: Cannot find name 'a.b.c'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(46,3): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(48,2): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(50,2): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(52,2): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(54,2): error TS2304: Cannot find name 'a'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(54,2): error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.


==== tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx (35 errors) ====
    /// <JSX factory="React.createElement" />
    declare var React: any;
    declare var 日本語;
    declare var AbC_def;
    declare var LeftRight;
    declare var x;
    declare var a;
    declare var props;
    
    <a />;
     ~
!!! error TS2304: Cannot find name 'a'.
     ~
!!! error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
    
    //<n:a n:v />; Namespace unsuported
    
    //<a n:foo="bar"> {value} <b><c /></b></a>;  Namespace unsuported
    
    <a b={" "} c=" " d="&amp;" e="id=1&group=2" f="&#123456789" g="&#123*;" h="&#x;" />;
     ~
!!! error TS2304: Cannot find name 'a'.
     ~
!!! error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
    
    <a b="&notanentity;" />;
     ~
!!! error TS2304: Cannot find name 'a'.
     ~
!!! error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
    <a
     ~
!!! error TS2304: Cannot find name 'a'.
     ~
!!! error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
    />;
    
    <日本語></日本語>;
     ~~~
!!! error TS2304: Cannot find name '日本語'.
     ~~~
!!! error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
    
    <AbC_def
     ~~~~~~~
!!! error TS2304: Cannot find name 'AbC_def'.
     ~~~~~~~
!!! error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
      test="&#x0026;&#38;">
    bar
    baz
    </AbC_def>;
    
    <a b={x ? <c /> : <d />} />;
     ~
!!! error TS2304: Cannot find name 'a'.
     ~
!!! error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
    
    <a>{}</a>;
     ~
!!! error TS2304: Cannot find name 'a'.
     ~
!!! error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
       ~~
!!! error TS1109: Expression expected.
    
    <a>{/* this is a comment */}</a>;
     ~
!!! error TS2304: Cannot find name 'a'.
     ~
!!! error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
       ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1109: Expression expected.
    
    <div>@test content</div>;
     ~~~
!!! error TS2304: Cannot find name 'div'.
    
    <div><br />7x invalid-js-identifier</div>;
     ~~~
!!! error TS2304: Cannot find name 'div'.
          ~~
!!! error TS2304: Cannot find name 'br'.
    
    <LeftRight left=<a /> right=<b>monkeys /> gorillas</b> />;
     ~~~~~~~~~
!!! error TS2304: Cannot find name 'LeftRight'.
     ~~~~~~~~~
!!! error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
    
    <a.b></a.b>;
     ~
!!! error TS2503: Cannot find namespace 'a'.
     ~~~
!!! error TS2304: Cannot find name 'a.b'.
    
    <a.b.c></a.b.c>;
     ~
!!! error TS2503: Cannot find namespace 'a'.
     ~~~~~
!!! error TS2304: Cannot find name 'a.b.c'.
    
    (<div />) < x;
      ~~~
!!! error TS2304: Cannot find name 'div'.
    
    <div {...props} />;
     ~~~
!!! error TS2304: Cannot find name 'div'.
    
    <div {...props} post="attribute" />;
     ~~~
!!! error TS2304: Cannot find name 'div'.
    
    <div pre="leading" pre2="attribute" {...props}></div>;
     ~~~
!!! error TS2304: Cannot find name 'div'.
    
    <a>    </a>;
     ~
!!! error TS2304: Cannot find name 'a'.
     ~
!!! error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
    